tooling/nargo_cli/tests/snapshots/execution_failure/unused_array_set_known_index_out_of_bounds/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
bug: Assertion is always false: Index out of bounds
  ┌─ src/main.nr:3:5
  │
3 │     array[10] = 1; // Index out of bounds
  │     --------- As a result, the compiled circuit is ensured to fail. Other assertions may also fail during execution
  │
  = Call stack:
    1: main
            at src/main.nr:3:5

error: Assertion failed: Index out of bounds
  ┌─ src/main.nr:3:5
  │
3 │     array[10] = 1; // Index out of bounds
  │     ---------
  │
  = Call stack:
    1: main
            at src/main.nr:3:5

Failed assertion
