tooling/nargo_cli/tests/snapshots/execution_failure/unused_array_set_known_index_out_of_bounds/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Index out of bounds
  ┌─ src/main.nr:3:11
  │
3 │     array[10] = 1; // Index out of bounds
  │           --
  │
  = Call stack:
    1: main
            at src/main.nr:3:11

Failed assertion
